<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:id="@+id/fristLinear"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/main_menu_titleb_bar"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mainproject_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="90dp"
            android:text="@string/about_project"
            android:textSize="30sp" />

        <Button
            android:id="@+id/imgbtn_settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/main_menu_settings" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondlinear"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/LightBrown"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fristLinear">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:background="@drawable/about_ittisaq_logo2" />

    </LinearLayout>

    <LinearLayout
        android:background="@color/AppBackground"
        android:orientation="vertical"
        android:id="@+id/thirdlinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondlinear">


        <TextView
            android:id="@+id/projectDescription_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introd_to_project"
            android:textColor="@color/DarkBrown"
            android:textSize="20sp"
            android:textStyle="bold"
            />



    </LinearLayout>


    <LinearLayout
        android:background="@color/AppBackground"
        android:orientation="vertical"
        android:id="@+id/fourthlinear"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/thirdlinear"

        >

        <TextView
            android:id="@+id/roaya_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roya"
            android:textColor="@color/LightBrown"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/roayaDescription_txt"
            android:text="@string/roya_description"
            android:textColor="@color/DarkBrown"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="50dp" />



    </LinearLayout>

    <LinearLayout
        android:background="@color/AppBackground"
        android:orientation="vertical"
        android:id="@+id/fifthlinear"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/fourthlinear"

        >

        <TextView
            android:id="@+id/resala_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resala"
            android:textColor="@color/LightBrown"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resalaDescription_txt"
            android:text="@string/resala_description"
            android:textColor="@color/DarkBrown"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="120dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sixLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/fifthlinear">


        <android.support.v7.widget.CardView
            android:id="@+id/card_qraatclick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">

            <android.support.v4.widget.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/main_menu_reading_off" />



        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/card_tagweedclick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">

            <android.support.v4.widget.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/main_menu_tagweed_off" />



        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/card_sheikhsclick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">

            <android.support.v4.widget.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/main_menu_sheikhs_off" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_projectclick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">

            <android.support.v4.widget.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/main_menu_project_on" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_aboutusclick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">

            <android.support.v4.widget.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/main_menu_about_off" />


        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:background="@color/AppBackground"
        android:id="@+id/sevenLinear"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/sixLinear">

        <TextView
            android:id="@+id/qraatclick_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/qraat"
            android:textColor="@color/DarkBrown" />

        <TextView
            android:id="@+id/tagweedclick_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tagweed"
            android:textColor="@color/DarkBrown" />

        <TextView
            android:id="@+id/sheikhsclick_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/shiek"
            android:textColor="@color/DarkBrown" />


        <TextView
            android:id="@+id/projectclick_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/about_project"
            android:textColor="@color/DarkBrown" />

        <TextView
            android:id="@+id/aboutusclick_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/who_us"
            android:textColor="@color/DarkBrown" />




    </LinearLayout>







</android.support.constraint.ConstraintLayout>