<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/frstLinear"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/main_menu_titleb_bar"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/img_main_menu_share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_menu_share" />



        <TextView
            android:id="@+id/shiek_desc_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:text="@string/shiek"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/img_main_menu_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_menu_back" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/secndlinear"
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/frstLinear"
        android:background="@color/AppBackground"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@drawable/about_king_khaled_logo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:background="@color/LightBrown"
            android:text="@string/abdelhakeem"
            android:textColor="@color/DarkBrown"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center"
            android:background="@color/LightBrown"
            android:text="@string/abdelhakeem_desc"
            android:textColor="@color/YellowBackground"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:gravity="right"
            android:textColor="@color/DarkBrown"
            android:textStyle="bold"
            android:text="@string/shiekh_desc_txt"
            android:layout_width="match_parent"
            android:layout_height="150dp" />



    </LinearLayout>


</android.support.constraint.ConstraintLayout>