<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/AppBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="470dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <LinearLayout
        android:id="@+id/frist_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/fifthlinear">


        <android.support.v7.widget.CardView
            android:id="@+id/card_qraatclick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">

            <android.support.v4.widget.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/main_menu_reading_off" />



        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/card_tagweedclick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">

            <android.support.v4.widget.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/main_menu_tagweed_off" />



        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/card_sheikhsclick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">

            <android.support.v4.widget.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/main_menu_sheikhs_off" />


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_projectclick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">

            <android.support.v4.widget.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/main_menu_project_on" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_aboutusclick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white">

            <android.support.v4.widget.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/main_menu_about_off" />


        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:background="@color/AppBackground"
        android:id="@+id/sevenLinear"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/frist_linear">

        <TextView
            android:id="@+id/qraatclick_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/qraat"
            android:textColor="@color/DarkBrown" />

        <TextView
            android:id="@+id/tagweedclick_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tagweed"
            android:textColor="@color/DarkBrown" />

        <TextView
            android:id="@+id/sheikhsclick_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/shiek"
            android:textColor="@color/DarkBrown" />


        <TextView
            android:id="@+id/projectclick_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/about_project"
            android:textColor="@color/DarkBrown" />

        <TextView
            android:id="@+id/aboutusclick_txt"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/who_us"
            android:textColor="@color/DarkBrown" />




    </LinearLayout>

    </LinearLayout>


</LinearLayout>